Modifed the application.properties file for H2 databse console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=recruitment_app
 spring.datasource.password=recruitment_app
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 # Miscellaneous settings
 spring.output.ansi.enabled=ALWAYS
