--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,11 @@ dependencies {
 
     // -- DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.h2database:h2:2.2.224'
-    implementation 'org.flywaydb:flyway-core:9.19.4'
-    implementation 'org.flywaydb:flyway-mysql:9.19.4'
-    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
     runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 
 
     // -- Others
